<resources>
    <string name="app_name">FoodApp</string>
    <string name="goCartDescription">Go to cart</string>
    <string name="food_order">Food Order</string>
    <string name="hungry_you_re_in_the_right_place">Hungry? You\'re in the right place!</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="tu_emailkonta">Tu @emailkonta</string>
    <string name="order_food_icon">order food icon</string>
    <string name="account">Account</string>
    <string name="account_icon">account icon</string>
    <string name="settings_icon">settings icon</string>
    <string name="orders_list_logo">orders list logo</string>
    <string name="email_logo">email logo</string>
    <string name="money_icon">money icon</string>
    <string name="password_icon">password icon</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="name">Name</string>
    <string name="tu_haslokonta">Tu @haslokonta</string>
    <string name="password">Password</string>
    <string name="tu_srodkikonta">Tu @srodkikonta$</string>
    <string name="money">Money</string>
    <string name="your_account">Your Account</string>
    <string name="order_food">Order Food</string>
    <string name="your_orders">Your orders</string>
    <string name="settings">Settings</string>
    <string name="user_s_profile_picture">user\'s profile picture</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="no_orders_add_some_by_clicking_here">No orders! Add some by clicking here!</string>
    <string name="audiomode">AudioMode</string>
    <string name="signout">Signout</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="hi_accountname">Hi @AccountName</string>
    <string name="order_your_food_in_foodapp">Order your food in FoodApp!</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="account_settings">Account settings</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="inapp_sound_level">In-App Sound Level</string>
    <string name="silent_mode">Silent Mode</string>
    <string name="silent_mode_icon">silent mode icon</string>
    <string name="night_theme">Night Theme</string>
    <string name="night_theme_icon">night theme icon</string>
    <string name="logout_icon">logout icon</string>
    <string name="logout_on_exit">Logout on exit</string>
    <string name="food_items_icon">food items icon</string>
    <string name="title">title</string>
    <string name="order_image_list">order image list</string>
    <string name="its_title">Its title</string>
    <string name="food_list">Food list</string>
    <string name="accountActivityHint">In this activity you can manage your account. You can         change your profile picture, check your name, email, password and money.</string>
    <string name="createAccountActivityHint">In this activity you can create your account. In order to do that you have to provide your username, email and password and then press create account button.</string>
    <string name="foodListActivityHint">In this activity you can see the list of all dishes.</string>
    <string name="loginActivityHint">In this activity you can log into application by entering your email and password. Once it\'s done, you can press login button. In case you don\'t have account, you can press register button in order to register.</string>
    <string name="orderingActivityHint">In this activity you can choose food category and see list of products that you can order. When you select what you want to order, you can press button on the bottom of the screen (shopping cart icon).</string>
    <string name="settingsActivityHint">In this activity you can manage settings of application. You can select if you want to logout from application on exit, select if you prefer night theme or select if you want to disable all sound effects (silent mode). You can also set sound level manually.</string>
    <string name="sign_out_before_account_creation_toast">You have to create account before signing out</string>
    <string name="sign_out_before_login_toast">You have to sign in before signing out</string>
    <string name="mainActivityHint">This is the welcome activity. You can press the button in the center of the screen to continue.</string>
    <string name="sign_out_on_main_activity_toast">You have to sign in or create new account before signing out.</string>
    <string name="show_detail_activity_hint">In this activity you can specify the amount of food item which you want to order</string>
    <string name="recharge_money">Recharge money</string>
    <string name="dollar">$</string>
    <string name="minus_icon">minus icon</string>
    <string name="food_icon">food icon</string>
    <string name="one">1</string>
    <string name="plus_icon">plus icon</string>
    <string name="description">Description</string>
    <string name="make_order">MAKE ORDER</string>
    <string name="category_picture">category picture</string>
    <string name="textview">Text View</string>
    <string name="zero_zero">0.0</string>
    <string name="product_image">product image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="making_order_done">Making order done!</string>
    <string name="not_enough_money_to_order">Not enough money to make an order!</string>
    <string name="it_may_take_some_time">It may take some time...</string>
    <string name="recharging_completed">Recharging completed</string>
    <string name="loading_image_into_database_done">Loading image into database done</string>
    <string name="loading_image_into_database_went_wrong">Loading image into database went wrong</string>
    <string name="empt_fields_arent_allowed">Empty fields aren\'t allowed</string>
    <string name="email_andor_password_are_incorrect">Email and/or password are incorrect</string>
    <string name="please_enter_email_and_password">Please enter email and password</string>
    <string name="small_burger">Small Burger</string>
    <string name="medium_burger">Medium Burger</string>
    <string name="big_burger">BigBurger</string>
    <string name="vege_burger" translatable="false">Vege Burger</string>
    <string name="golden_burger" translatable="false">Golden Burger</string>
    <string name="hotdog_with_mustard">Hotdog with mustard</string>
    <string name="vege_dog">VegeDog</string>
    <string name="chicken_dog">ChickenDog</string>
    <string name="premium_lemonade">Premium Lemonade</string>
    <string name="coca_cola_Zero">Coca Cola Zero</string>
    <string name="water_one_liter">Water (1l)</string>
    <string name="milk">Milk</string>
    <string name="beer">Beer</string>
    <string name="choconut">Choconut</string>
    <string name="choconut_with_sprinkles">Choconut with sprinkles</string>
    <string name="rassberrynut_with_sprinkles">Raspberrynut with sprinkles</string>
    <string name="vanilla_donut_with_sprinkles">Vanilla Donut with sprinkles</string>
    <string name="honeynut_with_icing">Honeynut with icing</string>
    <string name="small_but_very_tasty">Small but very tasty.</string>
    <string name="medium_sized_tasty_burger">Medium-sized, tasty burger.</string>
    <string name="can_replace_a_whole_meal">Can replace a whole meal.</string>
    <string name="tastes_like_a_chicken">Tastes like a chicken</string>
    <string name="expensive_product_for_the_richest">Expensive product for the richest</string>
    <string name="the_cheapest_hotdog">The cheapest hotdog.</string>
    <string name="tastes_like_meat_but_contains_vegetables_and_bread">Tastes like meat but contains vegetables and bread.</string>
    <string name="tastes_like_a_chicken_but_contains_dog_in_its_name">Tastes like a chicken but cotains dog in its name.</string>
    <string name="flavour_of_lemons">Flavour of lemons.</string>
    <string name="very_delicious_but_unhealthy">Very delicious but unhealthy.</string>
    <string name="not_mineralised">Not mineralised.</string>
    <string name="cow_milk">Cow milk</string>
    <string name="happy_hour">Happy hour!</string>
    <string name="donut_with_chocolate">Donut with chocolate.</string>
    <string name="donut_with_chocolate_and_sprinkles_on_top">Donut with chocolate and sprinkles on top.</string>
    <string name="tastes_like_rasberries">Tastes like raspberries.</string>
    <string name="the_cheapest_but_very_good">The cheapest but very good.</string>
    <string name="heaven_in_your_mouth">Heaven in your mouth.</string>
    <string name="small_pizza">Small Pizza</string>
    <string name="italian_pizza">Italian Pizza</string>
    <string name="super_spicy_pizza">Super Spicy Pizza</string>
    <string name="salami_pizza">Salami Pizza</string>
    <string name="pizza_with_mushrooms">Pizza with mushrooms</string>
    <string name="for_those_who_appreciate_bland_dishes">For those who appreciate bland dishes.</string>
    <string name="spicy_as_dragons_breath">Spicy as a dragon\'s breath.</string>
    <string name="pizza_with_meat">Pizza with meat.</string>
    <string name="why_do_i_feel_so_strange">WhY dO i FeEl So StRaNgE?!</string>
</resources>