<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cat_background">

        <TextView
            android:id="@+id/tvTitleProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title"
            android:textColor="@color/ibm_pink"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleProduct"
            app:srcCompat="@drawable/cat_1" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero_zero"
            android:textColor="@color/ibm_pink"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivProduct"
            app:layout_constraintStart_toEndOf="@+id/tvS"
            app:layout_constraintTop_toBottomOf="@+id/ivProduct" />

        <TextView
            android:id="@+id/tvS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar"
            android:textColor="@color/ibm_purple"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="@+id/ivProduct"
            app:layout_constraintTop_toTopOf="@+id/tvPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>