<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

        <TextView
            android:id="@+id/tvSoundLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/inapp_sound_level"
            android:textColor="@color/ibm_orange"
            android:textSize="34sp"
            app:layout_constraintTop_toBottomOf="@+id/swSilentMode" />

        <SeekBar
            android:id="@+id/sbSoundLevel"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="368dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:progressBackgroundTint="@color/ibm_orange"
            android:thumb="@drawable/large_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSoundLevel" />

        <TextView
            android:id="@+id/tvSettingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@color/ibm_orange"
            android:textSize="48sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logout_icon"
            app:layout_constraintBottom_toBottomOf="@+id/swLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsText"
            app:srcCompat="@drawable/ic_logout" />

        <Switch
            android:id="@+id/swLogout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:text="@string/logout_on_exit"
            android:textColor="@color/ibm_orange"
            android:textColorHint="@color/ibm_orange"
            android:textSize="24sp"
            android:thumbTint="@color/ibm_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivLogout"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsText" />

        <ImageView
            android:id="@+id/ivNightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/night_theme_icon"
            app:layout_constraintBottom_toBottomOf="@+id/swNightTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogout"
            app:srcCompat="@drawable/ic_night_mode" />

        <Switch
            android:id="@+id/swNightTheme"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:text="@string/night_theme"
            android:textColor="@color/ibm_orange"
            android:textSize="24sp"
            android:thumbTint="@color/ibm_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivNightTheme"
            app:layout_constraintTop_toBottomOf="@+id/swLogout" />

        <ImageView
            android:id="@+id/ivSilentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/silent_mode_icon"
            app:layout_constraintBottom_toBottomOf="@+id/swSilentMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivNightTheme"
            app:srcCompat="@drawable/ic_silent_mode" />

        <Switch
            android:id="@+id/swSilentMode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:text="@string/silent_mode"
            android:textColor="@color/ibm_orange"
            android:textSize="24sp"
            android:thumbTint="@color/ibm_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivSilentMode"
            app:layout_constraintTop_toBottomOf="@+id/swNightTheme" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/material_dynamic_neutral_variant40"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:fabCradleMargin="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/homeBtn"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivOrderFood"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="3dp"
                            android:background="#F3DB0E"
                            android:backgroundTint="@color/ibm_orange"
                            android:contentDescription="@string/order_food_icon"
                            app:srcCompat="@drawable/ic_foodlist" />

                        <TextView
                            android:id="@+id/tvOrderYourFood"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/order_food"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/BtnListOfOrders"
                        android:layout_width="104dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivListOfOrders"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="3dp"
                            android:background="#F3DB0E"
                            android:backgroundTint="@color/ibm_orange"
                            android:contentDescription="@string/no_orders_add_some_by_clicking_here"
                            app:srcCompat="@drawable/ic_listoforders" />

                        <TextView
                            android:id="@+id/tvYourOrders"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/your_orders"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/BtnAcc"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivAccount"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="3dp"
                            android:background="#F3DB0E"
                            android:backgroundTint="@color/ibm_orange"
                            android:contentDescription="@string/account_icon"
                            app:srcCompat="@drawable/ic_account_black" />

                        <TextView
                            android:id="@+id/tvAccount"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/account"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/BtnSettings"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivSettings"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="3dp"
                            android:background="#F3DB0E"
                            android:backgroundTint="@color/ibm_orange"
                            android:contentDescription="@string/settings_icon"
                            app:srcCompat="@drawable/ic_settings" />

                        <TextView
                            android:id="@+id/tvSettings"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/settings"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.bottomappbar.BottomAppBar>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ScrollView
            android:id="@+id/scrollView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>