<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp"
        android:gravity="center"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/food_order"
            android:textColor="@color/ibm_orange"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:cardUseCompatPadding="true"
                app:cardElevation="6dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/tv_welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/hungry_you_re_in_the_right_place"
                    android:textColor="@color/ibm_orange"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_GetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ibm_purple"
            android:text="@string/get_started"
            android:textSize="34sp" />


    </LinearLayout>
</layout>